--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ cache:
   - "$HOME/Library/Caches/Homebrew"
 before_install:
 - set -e
-- test -n "$pyver" || pyver="$(python -c "$print_version")"
+- |
+  : ${pyver:=$TRAVIS_PYTHON_VERSION}
+  test -n "$pyver"
 - test -d "$HOME/.pip" || mkdir "$HOME/.pip"
 - |
   {
@@ -130,6 +132,7 @@ before_script:
 - |  # Link Subversion bindings to the virtualenv.
   if [ "$build" != minimum -a "$TRAVIS_OS_NAME" = osx ]; then
     python_global="$(brew --prefix python@3.9)/libexec/bin/python"
+    print_version='import sys; print("%d.%d" % sys.version_info[:2])'
     if [ "$($python_global -c "$print_version")" = "$(python -c "$print_version")" ]; then
       print_sitelib='from distutils.sysconfig import get_python_lib; print(get_python_lib())'
       sitelib_global="$($python_global -c "$print_sitelib")"
